# fastapi-postgresql-app

./: README.md  auth.py  database.py  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5bf9d372c8c4_initial_schema.py
